--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,31 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>rest-api-sdk</artifactId>
+			<version>1.14.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.paypal.sdk/checkout-sdk -->
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>checkout-sdk</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+
+		<!-- Add these dependencies -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<version>2.6.2</version> <!-- Use the appropriate version -->
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
