--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -55,4 +55,10 @@ management:
 
 stripe:
   secret:
-    key: sk_test_HNULuXYU2Y2e6HFczm6E5Nd6
+    key: ${STRIPE_SECRET_KEY}
+
+paypal:
+  client:
+    id: ${PAYPAL_CLIENT_ID}
+    secret: ${PAYPAL_CLIENT_SECRET}
+  mode: 'sandbox'
