--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,11 +30,11 @@ springfox:
   documentation:
     swagger:
       ui:
-        base-url: /api-docs
+        base-url: /v2/api-docs
 
 springdoc:
   api-docs:
-    path: /api-docs
+    path: /v2/api-docs
   swagger-ui:
     path: /swagger-ui.html
 management:
