--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 			<version>2.6.2</version> <!-- Use the appropriate version -->
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.3</version> <!-- Use the latest version available -->
+		</dependency>
 
 	</dependencies>
 
