--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.3</version> <!-- Use the latest version available -->
 		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.6</version> <!-- Use the latest version available -->
+		</dependency>
 
 	</dependencies>
 
