--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,10 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.6</version> <!-- Use the latest version available -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 
 	</dependencies>
 
