--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     init:
       platform: mysql
   rabbitmq:
-    host: 127.0.0.1
+    host: ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1
     port: 5672
     username: guest
     password: guest
