--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ server:
 #  error:
 #    path: /error
 
+local-auth-backend: https://d430-66-253-183-231.ngrok-free.app
+
 spring:
   datasource:
     url: jdbc:mysql://us.umiuni.com:3306/umi_shop
@@ -38,9 +40,9 @@ spring:
           paypal:
             clientId: AYQwg1YezCe92zHxmpD8Y8q6M3_AbaGYpjs--ATI3WZzYBdcupomPY3L5lO91mdnv48iYjD6FQ41_QwE
             clientSecret: ECbVzUVjhR2Pu_x5PYeXGvmcBnQWK-9sJe1T5D-TlfwJwuXplM666HmJH9A8pvvjkU0UgvftWkSzw23b
-            redirectUri: "https://d7ff-66-253-183-231.ngrok-free.app/login/oauth2/code/paypal"
+            redirectUri: ${local-auth-backend}/login/oauth2/code/paypal
             authorizationGrantType: authorization_code
-        #            scope: openid, email, profile
+            scope: openid, email, profile
         provider:
           paypal:
             authorizationUri: https://www.sandbox.paypal.com/signin/authorize
@@ -58,7 +60,9 @@ springfox:
   documentation:
     swagger:
       ui:
-        base-url: /api-docs
+        base-url: /swagger-ui/ #/api-docs
+      v2:
+        path: /v2/api-docs
 
 springdoc:
   api-docs:
@@ -80,7 +84,6 @@ prod-backend: https://v2.quickmall24.com
 prod-frontend: https://www.quickmall24.com
 # host url for local dev
 local-backend: http://localhost:9001
-local-auth-backend: https://d7ff-66-253-183-231.ngrok-free.app
 local-frontend: http://localhost:3000
 
 paypal:
