--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,11 @@ server:
 #  error:
 #    path: /error
 
-local-auth-backend: https://dae0-66-253-183-231.ngrok-free.app
+local-auth-backend: https://3f35-66-253-183-231.ngrok-free.app
 
 spring:
+  main:
+    allow-bean-definition-overriding: true
   servlet:
     multipart:
       max-file-size: 10MB
@@ -35,7 +37,7 @@ spring:
     host: localhost
     port: 6379
   rabbitmq:
-    host: ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1 #ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1
+    host: 127.0.0.1 # ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1 #ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1
     port: 5672
     username: guest
     password: guest
@@ -132,6 +134,9 @@ inventory:
   reduce:
     queue:
       name: inventory_reduction_queue
+order:
+  queue:
+    name: order_queue
 
 product:
   image:
