update prod yml settings

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,10 +34,10 @@ spring:
     init:
       platform: mysql
   redis:
-    host: localhost # ec2-54-234-75-153.compute-1.amazonaws.com #localhost
+    host: ec2-54-234-75-153.compute-1.amazonaws.com # ec2-54-234-75-153.compute-1.amazonaws.com #localhost
     port: 6379
   rabbitmq:
-    host: 127.0.0.1 # ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1 #ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1
+    host: ec2-54-234-75-153.compute-1.amazonaws.com # ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1 #ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1
     port: 5672
     username: guest
     password: guest
