--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,10 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.13.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 
 	</dependencies>
 
