--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 #  error:
 #    path: /error
 
-local-auth-backend: https://f936-66-253-183-231.ngrok-free.app
+local-auth-backend: https://c357-66-253-183-231.ngrok-free.app
 
 spring:
   main:
