add AWS S3 service for storing the product images

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -163,3 +163,12 @@ product:
   image:
     storage:
       path: src/main/resources/image/storage
+
+# AWS S3 config
+cloud:
+  aws:
+    region:
+      static: us-east-1
+aws:
+  s3:
+    bucket-name: umi-mall-product-images
