--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,13 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.649</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
