--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
     init:
       platform: mysql
   redis:
-    host: ec2-18-206-182-131.compute-1.amazonaws.com # ec2-54-234-75-153.compute-1.amazonaws.com #localhost
+    host: 127.0.0.1 # ec2-54-234-75-153.compute-1.amazonaws.com #localhost
     port: 6379
   rabbitmq:
     host: 127.0.0.1 # ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1 #ec2-54-234-75-153.compute-1.amazonaws.com #127.0.0.1
