update swagger yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,7 +75,7 @@ springfox:
   documentation:
     swagger:
       ui:
-        base-url: /api-docs
+        base-url: /swagger-ui.html
 
 springdoc:
   api-docs:
