add supplier notification backend api_v1(TODO)

--- a/pom.xml
+++ b/pom.xml
@@ -181,8 +181,12 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.12.649</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
 <!--		<dependency>-->
 <!--			<groupId>org.springframework</groupId>-->
 <!--			<artifactId>spring-websocket</artifactId>-->
