--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,10 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-messaging</artifactId>
+		</dependency>
 
 		<!-- jwt -->
 		<dependency>
