--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -126,8 +126,8 @@ logging:
 #        type:
 #          descriptor:
 #            sql: trace
-      springframework:
-        security: DEBUG
+#      springframework:
+#        security: DEBUG
 
 
 # Define the names of your RabbitMQ queues
